项目管理模块完成

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "iview-area": "^1.5.16",
     "js-cookie": "^2.2.0",
     "lodash": "^4.17.5",
+    "moment": "^2.22.0",
     "rasterizehtml": "^1.2.4",
     "simplemde": "^1.11.2",
     "sortablejs": "^1.7.0",
